2000-09-09  Joseph S. Myers  <jsm28@cam.ac.uk>

	* battlestar/words.c: Make spacing nicer and add missing
	initialisers.

	* NEWS, TODO: Update.

	* battlestar/battlestar.6, battlestar/battlestar.c,
	battlestar/com1.c, battlestar/com5.c, battlestar/cypher.c,
	battlestar/dayfile.c, battlestar/extern.h, battlestar/globals.c,
	battlestar/init.c, battlestar/nightfile.c, battlestar/room.c:
	Update from NetBSD CVS after merge.

2000-09-08  Joseph S. Myers  <jsm28@cam.ac.uk>

	* battlestar/battlestar.6: Don't refer to ~.  Suggested by Hubert
	Feyrer.

	* battlestar/extern.h, battlestar/globals.c, battlestar/init.c:
	Don't restrict length of username, use a string from strdup
	instead.  Make functions and arrays only used in init.c static.

2000-09-07  Joseph S. Myers  <jsm28@cam.ac.uk>

	* battlestar/extern.h: Put prototypes in alphabetical order.

	* fortune/datfiles/Makefile.bsd: Really update from NetBSD CVS.

	* battlestar/battlestar.6: Improvements from OpenBSD.
	* battlestar/extern.h: Define ROOMDESC.
	* battlestar/room.c (writedes): Use it.
	* battlestar/battlestar.c: From OpenBSD, make clearer and don't
	increase beenthere[position] beyond ROOMDESC.
	* battlestar/com1.c (news), battlestar/com5.c (kiss),
	battlestar/cypher.c (cypher), battlestar/dayfile.c (dayfile),
	battlestar/globals.c (objdes, objsht), nightfile.c (nightfile):
	Spelling and punctuation corrections or adjustments from OpenBSD.

	* tests/battlestar.test: Test for wizard or anti-wizard users.

2000-09-06  Joseph S. Myers  <jsm28@cam.ac.uk>

	* tests/battlestar.in5, tests/battlestar.out5,
	tests/battlestar.in6, tests/battlestar.out6,
	tests/battlestar.err6: New files.
	* tests/battlestar.test: Update.

	* tests/battlestar.test, tests/battlestar.in1,
	tests/battlestar.out1, tests/battlestar.in2,
	tests/battlestar.out2, tests/battlestar.in3,
	tests/battlestar.out3, tests/battlestar.in4,
	tests/battlestar.out4: New files.

	* lib/.cvsignore: New file.
	* morse/.cvsignore: Add morse.
