@@ -12,6 +12,6 @@ the wall ahead comes a view of darkest space.  There is a small adjoining
 room behind you, and a doorway right.
 
 >-: 
-Save file name (default .Bstar) Saved in /dev/full.
+Save file name (default .Bstar): Saved in /dev/full.
 >-: bye.
 Your rating was novice.
