@@ -19,19 +19,16 @@ up or down. This parlor leads into a hallway left. The bridal suite is right.
 Other rooms lie ahead and behind you.
 
 >-: 
-	You are in what was once an elegant stateroom.
-Whoever lived in this stateroom, he and his female companion
-were mercilessly slain in their sleep. Clothes, trinkets and personal
-belongings are scattered all across the floor. Through a hole in the
-collapsed floor I can see a hallway below.  A door is behind you.
+	This is the maid's utility room.
+What a gruesome sight! The maid has been brutally drowned in a bucket of
+Pine Sol and repeatedly stabbed in the back with a knife.
+The hallway is behind you.
 
-There is a strange golden amulet on the floor here.
->-: The amulet is warm to the touch, and its beauty catches your breath.
-A mist falls over your eyes, but then it is gone.  Sounds seem clearer
-and sharper but far away as if in a dream.  The sound of purling water
-reaches you from afar.  The mist falls again, and your heart leaps in horror.
-The gold freezes your hands and fathomless darkness engulfs your soul.
-amulet:
+There is a knife here.
+The maid's body is lying here. She was murdered!
+>-: knife:
 Taken.
+>-: Your knife should do the trick.
+You can't kill that!
 >-: bye.
 Your rating was novice.
